# fpse-project

./: .gitignore  README.md  dune  dune-project  image_generator.opam
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/0239f03c537a9797eb8a71ed48e45a87/: dune__exe___ppx.cmo
_build/default/.ppx/47e007fefa63695257b4d9874e3138b7/: dune__exe___ppx.cmo
_build/default/.ppx/4fa3b5aa8d6f8873d1c830fdfbeebaad/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/src/: content_dataset_utils.pp.ml  database.cmxs  database.mli  database.pp.ml  database.pp.mli  embedding.cma  embedding.cmxa  embedding.cmxs  embedding.mli  image.cmxs  image_utils.cma  image_utils.cmxa  image_utils.cmxs  image_utils.ml  image_utils.mli  loader.cma  loader.cmxa  loader.cmxs  loader.pp.ml  loader.pp.mli  loss.cma  loss.cmxa  loss.cmxs  loss.ml  loss.mli  loss.pp.ml  loss.pp.mli  neural_style_transfer.cmxa  neural_style_transfer.cmxs  nst.cma  nst.cmxa  nst.cmxs  nst.ml  nst.pp.ml  nst.pp.mli  server.cma  server.cmxs  server.pp.ml  server.pp.mli  style_dataset_utils.ml  (+10 more)
_build/default/src/.content_dataset_utils.eobjs/byte/: dune__exe__Content_dataset_utils.cmi  dune__exe__Content_dataset_utils.cmti
_build/default/src/.content_dataset_utils.eobjs/native/: dune__exe__Content_dataset_utils.cmx
_build/default/src/.database.eobjs/byte/: dune__exe__Database.cmi  dune__exe__Database.cmti
_build/default/src/.database.eobjs/native/: dune__exe__Database.cmx
_build/default/src/.embedding.objs/byte/: embedding.cmi  embedding.cmo  embedding.cmt  embedding.cmti
_build/default/src/.embedding.objs/native/: embedding.cmx
_build/default/src/.image_utils.objs/byte/: image_utils.cmi  image_utils.cmo  image_utils.cmt  image_utils.cmti
_build/default/src/.image_utils.objs/native/: image_utils.cmx
_build/default/src/.loader.objs/byte/: loader.cmi  loader.cmo  loader.cmt  loader.cmti
_build/default/src/.loader.objs/native/: loader.cmx
_build/default/src/.loss.objs/byte/: loss.cmi  loss.cmo  loss.cmt  loss.cmti
_build/default/src/.loss.objs/native/: loss.cmx
_build/default/src/.merlin-conf/: exe-content_dataset_utils  exe-database  exe-server  exe-style_dataset_utils  lib-database  lib-embedding  lib-image  lib-image_utils  lib-loader  lib-loss  lib-neural_style_transfer  lib-nst  lib-server  lib-submission  lib-vgg_custom
_build/default/src/.nst.objs/byte/: nst.cmi  nst.cmo  nst.cmt  nst.cmti
_build/default/src/.nst.objs/native/: nst.cmx
_build/default/src/.server.eobjs/byte/: dune__exe__Server.cmi  dune__exe__Server.cmti
_build/default/src/.server.eobjs/native/: dune__exe__Server.cmx
_build/default/src/.style_dataset_utils.eobjs/byte/: dune__exe__Style_dataset_utils.cmi  dune__exe__Style_dataset_utils.cmti
_build/default/src/.style_dataset_utils.eobjs/native/: dune__exe__Style_dataset_utils.cmx
_build/default/src/.submission.objs/byte/: submission.cmi  submission.cmo  submission.cmt
_build/default/src/.submission.objs/native/: submission.cmx
_build/default/src/.vgg_custom.objs/byte/: vgg_custom.cmi  vgg_custom.cmo  vgg_custom.cmt  vgg_custom.cmti
_build/default/src/.vgg_custom.objs/native/: vgg_custom.cmx
_build/default/src/demos/.cohttp_client.eobjs/byte/: dune__exe__Cohttp_client.cmi  dune__exe__Cohttp_client.cmti
_build/default/src/demos/.cohttp_client.eobjs/native/: dune__exe__Cohttp_client.cmx
_build/default/src/demos/.dream.eobjs/byte/: dune__exe__Dream.cmi  dune__exe__Dream.cmti
_build/default/src/demos/.dream.eobjs/native/: dune__exe__Dream.cmx
_build/default/src/demos/.merlin-conf/: exe-cohttp_client  exe-dream  exe-postgre  exe-torch
_build/default/src/demos/.postgre.eobjs/byte/: dune__exe__Postgre.cmi  dune__exe__Postgre.cmti
_build/default/src/demos/.postgre.eobjs/native/: dune__exe__Postgre.cmx
_build/default/src/demos/.torch.eobjs/byte/: dune__exe__Torch.cmi  dune__exe__Torch.cmti
_build/default/src/demos/.torch.eobjs/native/: dune__exe__Torch.cmx
_build/default/tests/: dune
_build/default/tests/.merlin-conf/: exe-tests
_build/default/tests/.tests.eobjs/byte/: dune__exe__Tests.cmti
_build/default/tests/.tests.eobjs/native/: dune__exe__Tests.cmx
_coverage/: index.html
_coverage/src/: embedding.ml.html  image_utils.ml.html  loader.ml.html  loss.ml.html  nst.ml.html
client/: package-lock.json  package.json
client/src/: App.js
client/src/components/: AssistantMessage.jsx  Header.jsx  Messages.jsx  QueryInput.jsx  UserMessage.jsx
client/src/components/core/: Badge.jsx  Loader.jsx  Modal.jsx  PrimaryButton.jsx  SecondaryButton.jsx  Textarea.jsx
src/: bisect248986620.coverage  bisect31449964.coverage  bisect425448521.coverage  bisect835626514.coverage  content_dataset_utils.ml  database.ml  database.mli  dune  embedding.ml  embedding.mli  frontend.mli  image.mli  image_utils.ml  image_utils.mli  loader.ml  loader.mli  neural_style.mli  neural_style_transfer.ml  neural_style_transfer.mli  nst.ml  nst.mli  nst_video.ml  nst_video.mli  seed.mli  server.ml  server.mli  style_dataset_utils.ml  t.csv  testing_embeddings.ml  text_classifier.mli  vgg_custom.ml
src/data/style/: style_labels.csv
src/demos/: cohttp_client.ml  dream.ml  dune  postgre.ml  torch.ml
tests/: dune  tests.ml
