(library
  (name embedding)
  (modules embedding))

(library
  (name image_utils)
  (modules image_utils)
  (libraries owl))

(executable
 (name neural_style_transfer)
 (modules neural_style_transfer)
 (libraries owl image_utils))

(library
  (name server)
  (modules server)
  (modules_without_implementation server)
  (libraries core core_unix dream cohttp-lwt-unix lwt))

(executable
  (name style_dataset_utils)
  (modules style_dataset_utils)
  (libraries
  core 
  core_unix.filename_unix
  core_unix.command_unix
  cohttp-lwt-unix 
  cohttp
  lwt
  yojson
  csv
  embedding)
  (preprocess (pps ppx_let bisect_ppx)))

(executable
  (name content_dataset_utils)
  (modules content_dataset_utils)
  (libraries
  core 
  core_unix.filename_unix
  core_unix.command_unix
  cohttp-lwt-unix 
  cohttp
  lwt
  yojson
  csv
  embedding)
  (preprocess (pps ppx_let)))

(executables
  (names database)
  (modules database)
  (libraries 
  postgresql 
  csv 
  embedding 
  base64
  core 
  core_unix.filename_unix
  core_unix.command_unix
  cohttp-lwt-unix 
  cohttp
  lwt
  yojson)
  (preprocess (pps ppx_let)))