(library
 (name embedding)
 (modules embedding)
 (preprocess
  (pps bisect_ppx)))

(library
 (name vgg_custom)
 (modules vgg_custom)
 (libraries base torch)
 (preprocess
  (pps bisect_ppx)))

(library
 (name loader)
 (modules loader)
 (libraries torch torch.vision vgg_custom)
 (preprocess
  (pps bisect_ppx)))

(library
 (name loss)
 (modules loss)
 (libraries torch)
 (preprocess
  (pps bisect_ppx)))

(library
 (name nst)
 (modules nst)
 (libraries torch torch.vision loader loss vgg_custom)
 (preprocess
  (pps bisect_ppx)))

; (library
;  (name nst_video)
;  (modules nst_video)
;  (libraries nst ffmpeg)
;  (preprocess
;   (pps bisect_ppx)))

(library
 (name server)
 (modules server)
 (modules_without_implementation server)
 (libraries core core_unix dream cohttp-lwt-unix lwt)
 (preprocess
  (pps bisect_ppx)))

(executable
 (name style_dataset_utils)
 (modules style_dataset_utils)
 (libraries
  core
  core_unix.filename_unix
  core_unix.command_unix
  cohttp-lwt-unix
  cohttp
  lwt
  yojson
  csv
  embedding)
 (preprocess
  (pps ppx_let bisect_ppx)))

(executable
 (name content_dataset_utils)
 (modules content_dataset_utils)
 (libraries
  core
  core_unix.filename_unix
  core_unix.command_unix
  cohttp-lwt-unix
  cohttp
  lwt
  yojson
  csv
  embedding)
 (preprocess
  (pps ppx_let bisect_ppx)))

(executables
 (names database)
 (modules database)
 (libraries
  postgresql
  csv
  embedding
  base64
  core
  core_unix.filename_unix
  core_unix.command_unix
  cohttp-lwt-unix
  cohttp
  lwt
  yojson)
 (preprocess
  (pps ppx_let bisect_ppx)))
