(executables
  (names torch)
  (libraries
  torch
  torch.vision)
  (modules torch))

(executables
  (names postgre)
  (libraries postgresql)
  (modules postgre))

(executable
  (name dream)
  (modules dream)
  (libraries dream))

(executable
  (name cohttp_client)
  (modules cohttp_client)
  (libraries 
  cohttp-lwt-unix 
  lwt))